# jsonl-vault-spike

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  Makefile  NOTICE.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  design_question.yml
docs/: ARCHITECTURE.md  HERO_GUIDELINES.md  HERO_PROMPT.md  IMPORT_DEMO.md  MAINTAINER_CHECKLIST.md  PACKAGE.md  RECORD_MODEL.md  REPO_COMPLETE.md  ROADMAP.md  VAULT_EVALUATION.md
evals/: retrieval.jsonl
fixtures/import-demo/: manifest.json
fixtures/import-demo/folder-drop/: metrics-alpha.csv  readme-alpha.txt
fixtures/import-demo/mail/: message-alpha.json
fixtures/import-demo/markdown/: synthetic-project-note.md
jsonl_vault_spike/: cli.py
jsonl_vault_spike/data/: README.md
jsonl_vault_spike/data/raw/: telegram.jsonl
records/: claims.jsonl  decisions.jsonl  entities.jsonl  media_assets.jsonl  media_links.jsonl  projects.jsonl  relations.jsonl  sources.jsonl  tasks.jsonl
reports/: import-demo-dashboard.html  media-mvp-summary.json  vault-schema-coverage.json
retrieval/: hints.jsonl
schema/: claim.schema.json  decision.schema.json  entity.schema.json  file.schema.json  media_asset.schema.json  note.schema.json  project.schema.json  relation.schema.json  task.schema.json
scripts/: evaluate_obsidian_vault.py  generate_synthetic_dataset.py  validate_repository.py  vaultctx.py
tests/: test_cli.py  test_evaluate_obsidian_vault.py  test_repository_guard.py
(+30 files in other folders)
