[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonl-vault-spike"
version = "0.1.0"
description = "Synthetic JSONL-first vault/context proof of concept for agent-readable personal knowledge systems"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "viggomeesters"}]
keywords = ["jsonl", "agents", "context-engineering", "personal-knowledge-management", "synthetic-data"]
dependencies = ["jsonschema==4.23.0"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4", "build==1.2.2.post1"]

[project.scripts]
vaultctx = "jsonl_vault_spike.cli:main"

[project.urls]
Homepage = "https://github.com/viggomeesters/jsonl-vault-spike"
Repository = "https://github.com/viggomeesters/jsonl-vault-spike"
Issues = "https://github.com/viggomeesters/jsonl-vault-spike/issues"

[tool.setuptools.packages.find]
include = ["jsonl_vault_spike*"]
namespaces = true

[tool.setuptools.package-data]
jsonl_vault_spike = ["data/**/*.jsonl", "data/**/*.json", "data/objects/**/*", "data/README.md"]
